final kmom01 version

--- a/content/redovisning/01_kmom01.md
+++ b/content/redovisning/01_kmom01.md
@@ -3,4 +3,10 @@
 Redovisning kmom01
 =========================
 
-Detta innehåll är skrivet i markdown och du hittar innehållet i filen `content/redovisning/01_kmom01.md`.
+Detta är den första gången jag arbetar med ramverk för att bygga webbplaster. Den lilla erfarenhet jag har sedan tidigare av att bygga webbsidor har jag alltid börjat från scratch. Den enda av de introducerade teknikerna vid detta kursmoment som jag har tidigare erfarenhet av är git/github. Allt annat är nytt.
+
+Jag har förmodligen en omedveten idé om hu ren webbsida bör se ut i grunden, även om det är svårt att artikulera då mina jag sällan aktivt tänkt på utformandet och designen av webbsidor, än så länge. I de flesta fall förväntar jag mig dock att det finns någon sorts header, navbar, huvudsakligt innehåll, samt en footer av något slag. Även att de olika sidorna som utgör en webbplats har återkommande delar, så som navbar och footer.  Utöver detta finns givna förutfattade meningar om vad som utgör rimlig design, så som att texten på sidan är läsbar, både gällande storlek, samt färgkombinationen mellan texten och bakgrundsfärgen bakom texten.
+
+När jag själv inte skapat HTML-strukturen för sidan, samt strukturerat de olika delarna i klasser och namngett dessa delar så upplever jag att det är väldigt mycket svårare att styla. Det är svårare att bilda en uppfattning om vilka delar som omfattas av vilka klasser, samt hur man kommer åt innehållet i de olika klasserna, utan att oavsiktligt påverka annat innehåll. Inspektorn hjälper med detta, men samtidigt är det svårt att navigera bland filerna för att hitta den del av sidan man önskar modifiera. Allt blir mer invecklat och även mer frustrerande att arbeta med. Div-strukturen anser jag vara svårförståelig, gällande upplägget, samt namngivningen av de olika div-taggarna.
+
+Min TIL för detta kursmoment är den första introduktionen till att utgå från ett mer omfattande ramverk, istället för att bygga en webbsida helt och hållet från scratch. Att utgå från ett ramverk kräver att man åtminstone översiktligt sätter sig in i den struktur som ramverket medför, för att kunna ändra och styla innehållet efter behov. Jag upplever att det lätt blir rörigt och att ändringar i CSS sällan resulterar i de förändringar jag förväntad mig. 
